[package]
name = "claude-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.13", features = ["json", "stream", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
config = "0.15"
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
clap = { version = "4.5.54", features = ["derive"] }

[dev-dependencies]
toml = "0.9.11"
