[package]
name = "claude-proxy"
version = "0.5.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
# Use ring instead of aws-lc-rs for TLS (better cross-platform support, no cmake dependency)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-webpki-roots", "charset", "http2", "rustls-tls-manual-roots-no-provider"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
async-trait = "0.1"
config = "0.15"
futures = "0.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = "0.1"
clap = { version = "4.5.54", features = ["derive"] }
dirs = "6"
urlencoding = "2.1.3"

# TLS support - use ring crypto provider (no cmake/aws-lc dependency)
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }

# ACME support
instant-acme = { version = "0.7", default-features = false, features = ["hyper-rustls", "ring"] }
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

[dev-dependencies]
toml = "0.9"
